src/snapshots/zeek_language_server__complete__test__event-3.snap
---
source: src/complete.rs
expression: "complete(&db.0, CompletionParams\n{\n    text_document_position:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(hok),\n    Position::new(1, 6),), work_done_progress_params:\n    WorkDoneProgressParams::default(), partial_result_params:\n    PartialResultParams::default(), context: None,\n})"
---
Some(
    Array(
        [
            CompletionItem {
                label: "hok",
                label_details: Some(
                    CompletionItemLabelDetails {
                        detail: Some(
                            "(c: count, s: string)",
                        ),
                        description: None,
                    },
                ),
                kind: Some(
                    Operator,
                ),
                detail: None,
                documentation: Some(
                    MarkupContent(
                        MarkupContent {
                            kind: Markdown,
                            value: "```zeek\nglobal hok: hook(c: count, s: string);\n```",
                        },
                    ),
                ),
                deprecated: None,
                preselect: None,
                sort_text: None,
                filter_text: None,
                insert_text: Some(
                    "hok(c: count, s: string)\n\t{\n\t${0}\n\t}",
                ),
                insert_text_format: Some(
                    Snippet,
                ),
                insert_text_mode: None,
                text_edit: None,
                additional_text_edits: None,
                command: None,
                commit_characters: None,
                data: None,
                tags: None,
            },
        ],
    ),
)
