src/snapshots/zeek_language_server__complete__test__record_initializer-5.snap
---
source: src/complete.rs
expression: "complete(&db.0, CompletionParams\n{\n    text_document_position:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri),\n    Position::new(1, 16),), work_done_progress_params:\n    WorkDoneProgressParams::default(), partial_result_params:\n    PartialResultParams::default(), context: None,\n},).and_then(|completion|\n{\n    if let CompletionResponse::Array(items) = completion\n    {\n        Some(items.into_iter().filter(|item|\n        matches!(item.kind,\n        Some(CompletionItemKind::SNIPPET))).collect::<Vec<_>>(),)\n    } else { None }\n})"
---
Some(
    [
        CompletionItem {
            label: "X",
            label_details: None,
            kind: Some(
                Snippet,
            ),
            detail: None,
            documentation: None,
            deprecated: None,
            preselect: None,
            sort_text: None,
            filter_text: None,
            insert_text: Some(
                "xa=${1:[]}]",
            ),
            insert_text_format: Some(
                Snippet,
            ),
            insert_text_mode: None,
            text_edit: None,
            additional_text_edits: None,
            command: None,
            commit_characters: None,
            data: None,
            tags: None,
        },
    ],
)
